Finis workout (#20)
* working

* doc references
